deployment.yml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "k8s-node"
  namespace: "default"
  labels:
    app: "k8s-node"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "k8s-node"
  template:
    metadata:
      labels:
        app: "k8s-node"
    spec:
      containers:
        - name: "k8s-hello-node"
          image: "853931821519.dkr.ecr.us-east-1.amazonaws.com/devsecops-rac3-registry:2048"
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      imagePullSecrets:
      - name: ecr-secret

---
# must use kuberentes version 1.24 and below to use
# apiVersion: "autoscaling/v2beta1"
# kind: "HorizontalPodAutoscaler"
# metadata:
#   name: "k8s-node-hpa"
#   namespace: "default"
#   labels:
#     app: "k8s-node"
# spec:
#   scaleTargetRef:
#     kind: "Deployment"
#     name: "k8s-node"
#     apiVersion: "apps/v1beta1"
#   minReplicas: 1
#   maxReplicas: 5
#   metrics:
#     - type: "Resource"
#       resource:
#         name: "cpu"
#         targetAverageUtilization: 80
