ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
  name: k8s-node-ingress
  namespace: default
spec:
  #Used to target the nginx ingress controller default is nginx
  ingressClassName: nginx
  rules:
    - host: nextgends.axle-interns.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-node-internal
                port: 
                  number: 80
